[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Fonts/Watermelon Days.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/Menu/Options.gd" type="Script" id=2]
[ext_resource path="res://assets/UI/SimpleBox.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 112
outline_size = 5
outline_color = Color( 0.301961, 0.65098, 1, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 72
outline_size = 5
outline_color = Color( 0.301961, 0.65098, 1, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[node name="Options" type="Node"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TitleLabel" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -247.5
margin_top = 110.0
margin_right = 136.5
margin_bottom = 238.0
custom_fonts/font = SubResource( 1 )
text = "crystal dash"

[node name="CreatorLabel" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -310.0
margin_right = 95.0
margin_bottom = -228.0
custom_fonts/font = SubResource( 2 )
text = "options:"

[node name="MusicLabel" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -460.0
margin_top = -65.0
margin_right = -230.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 2 )
text = "music: on"

[node name="SfxLabel" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 240.0
margin_top = -65.0
margin_right = 415.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 2 )
text = "sfx: on"

[node name="MusicButton" type="CheckBox" parent="CanvasLayer"]
margin_left = 557.0
margin_top = 565.0
margin_right = 581.0
margin_bottom = 589.0
rect_scale = Vector2( 5, 5 )
pressed = true
align = 1
icon_align = 1

[node name="SfxButton" type="CheckBox" parent="CanvasLayer"]
margin_left = 1234.0
margin_top = 565.0
margin_right = 1258.0
margin_bottom = 589.0
rect_scale = Vector2( 5, 5 )
pressed = true
align = 1
icon_align = 1

[node name="QuitButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = 360.0
margin_right = 65.0
margin_bottom = 421.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "menu"

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="CanvasLayer/MusicButton" to="." method="_on_MusicButton_pressed"]
[connection signal="pressed" from="CanvasLayer/SfxButton" to="." method="_on_SfxButton_pressed"]
[connection signal="pressed" from="CanvasLayer/QuitButton" to="." method="_on_QuitButton_pressed"]
